[gd_scene load_steps=5 format=2]

[ext_resource path="res://Spirit.gd" type="Script" id=1]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array(  )
}

[sub_resource type="ImageTexture" id=2]
size = Vector2( 20, 40 )

[sub_resource type="CapsuleShape2D" id=3]

[node name="Spirit" type="Path2D"]
curve = SubResource( 1 )
script = ExtResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="."]
rotate = false

[node name="Sprite" type="Sprite" parent="PathFollow2D"]
texture = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="PathFollow2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/Area2D"]
shape = SubResource( 3 )

[node name="HealthTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="PathFollow2D/Area2D" to="." method="_on_body_entered"]
[connection signal="timeout" from="HealthTimer" to="." method="_on_HealthTimer_timeout"]
